--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "bootstrap": "4.4.1",
-        "font-awesome": "^4.7.0"
+        "bootstrap4-toggle": "^3.6.1",
+        "font-awesome": "^4.7.0",
+        "noty": "^3.2.0-beta"
     }
 }
