--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/css/app.css": "/css/app.css?id=f8991853db61f8c0c79f",
-    "/js/app.js": "/js/app.js?id=9513a7de6f4cdbb2b16e"
+    "/css/app.css": "/css/app.css?id=916296c8e407e243c2a5",
+    "/mix.js.map": "/mix.js.map?id=89e5f51afc59d331fd87",
+    "/css/app.css.map": "/css/app.css.map?id=e317a448876e0f19bbf2",
+    "/js/app.js": "/js/app.js?id=7c190db2a8be3dc8f7ac"
 }
