--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DECONZ_KEY=
+DECONZ_URL=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=database
