--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@yaireo/tagify": "^3.4.0",
         "bootstrap": "4.4.1",
         "bootstrap4-toggle": "^3.6.1",
+        "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
         "jquery-circle-progress": "^1.2.2",
         "noty": "^3.2.0-beta"
