Change TimePickr && Add Custom Rules for RoutineValidation && Add Routines

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
         "@yaireo/tagify": "^3.4.0",
         "bootstrap": "4.4.1",
         "bootstrap4-toggle": "^3.6.1",
-        "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
         "jquery-circle-progress": "^1.2.2",
-        "noty": "^3.2.0-beta"
+        "noty": "^3.2.0-beta",
+        "pickerjs": "^1.2.1"
     }
 }
