--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ DB_PASSWORD=
 DECONZ_KEY=
 DECONZ_URL=
 
+DEFAULT_MINUTE_STATE=
+
+DAY_HOUR=
+NIGHT_HOUR =
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=database
