--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,10 @@ analyse:
   image: lorisleiva/laravel-docker:7.3
   script:
     - composer install --no-ansi --no-interaction --no-progress
-    - ./vendor/bin/phpstan analyse --no-progress
+    - ./vendor/bin/phpstan analyse --no-progress -vvv > phpstan_results.txt
+  artifacts:
+    when: always
+    expire_in: 1 month
+    paths:
+      - phpstan_results.txt
+
