--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/larastan": "^0.5.2",
+        "nunomaduro/phpinsights": "^1.13",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
