--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,11 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-DECONZ_KEY=
-DECONZ_URL=
+ZIGBEE_KEY=
+ZIGBEE_URL=
+
+AZURE_CLIENT=
+AZURE_SECRET=
 
 DEFAULT_MINUTE_STATE=
 
