--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
+        "doctrine/dbal": "^2.10",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laravel/dusk": "^5.9",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/phpinsights": "^1.13",
