Add xml for dusk

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ test:
   image: chilio/laravel-dusk-ci:stable
   script:
     - cp .env.testing .env
+    - cp phpunit.xml.ci phpunit.xml
     - configure-laravel
     - start-nginx-ci-project
     - ./vendor/phpunit/phpunit/phpunit -v --coverage-text --colors --stderr
