--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,4 +66,5 @@ insights:
       - node_modules
     policy: pull
   script:
+    - cp .env.testing .env
     - php artisan insights --no-interaction --min-quality=80 --min-complexity=75 --min-architecture=90 --min-style=95
