--- a/.env.testing
+++ b/.env.testing
@@ -21,8 +21,8 @@ AZURE_SECRET=
 
 DEFAULT_MINUTE_STATE=
 
-DAY_HOUR=
-NIGHT_HOUR =
+DAY_HOUR=8
+NIGHT_HOUR =20
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
