Update telescope auth

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,9 @@ AZURE_SECRET=
 DEFAULT_MINUTE_STATE=
 
 DAY_HOUR=
-NIGHT_HOUR =
+NIGHT_HOUR=
+
+TELESCOPE_LIMIT=500
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
