--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.12.1",
         "@yaireo/tagify": "^3.4.0",
         "bootstrap": "4.4.1",
-        "bootstrap4-toggle": "^3.6.1",
+        "bootstrap-notify": "^3.1.3",
+        "chart.js": "^2.9.3",
         "jquery-circle-progress": "^1.2.2",
         "jquery-typeahead": "^2.11.0",
         "noty": "^3.2.0-beta",
-        "pickerjs": "^1.2.1"
+        "pickerjs": "^1.2.1",
+        "popper.js": "^1.12"
     }
 }
