--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "convert": "node_modules/.bin/docsify-pdf-converter"
     },
     "devDependencies": {
         "axios": "^0.19",
         "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
-        "laravel-mix": "^5.0.1",
+        "docsify-pdf-converter": "^2.0.7",
+        "laravel-mix": "^5.0.4",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.26.3",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.10"
@@ -33,5 +35,18 @@
         "noty": "^3.2.0-beta",
         "pickerjs": "^1.2.1",
         "popper.js": "^1.12"
+    },
+    "docsifytopdf": {
+        "contents": [
+            "docs/_sidebar.md"
+        ],
+        "pathToPublic": "export/Light-Controls-Doc.pdf",
+        "removeTemp": true,
+        "emulateMedia": "screen",
+        "pathToDocsifyEntryPoint": "./docs",
+        "pathToStatic": "static",
+        "pdfOptions": {
+            "format": "A4"
+        }
     }
 }
