--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     container: docker://chilio/laravel-dusk-ci:stable
     services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: lightscontrols
+      mariadb:
+        image: mariadb:latest
         ports:
           - 3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        env:
+          MYSQL_USER: homestead
+          MYSQL_PASSWORD: secret
+          MYSQL_DATABASE: homestead
+          MYSQL_ROOT_PASSWORD: password
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
     steps:
       - uses: actions/checkout@master
       - name: Download Dependencies
