--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,16 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
-        "laravel/ui": "^1.2",
         "doctrine/dbal": "^2.10",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/dusk": "^5.9",
+        "laravel/ui": "^1.2",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/phpinsights": "^1.13",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "staudenmeir/dusk-updater": "^1.1"
     },
     "config": {
         "optimize-autoloader": true,
