--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,23 @@ jobs:
         run: |
           cp .env.testing .env
           cp .phpunit.dusk.xml phpunit.xml
-          php artisan dusk:update 81
+          php artisan dusk:update --detect
           configure-laravel
           start-nginx-ci-project
       - name: Run dusk tests
         run: php artisan dusk
+  tests:
+      name: Unit Tests
+      runs-on: ubuntu-latest
+      container: docker://chilio/laravel-dusk-ci:stable
+      steps:
+        - uses: actions/checkout@v1
+        - name: Setup Laravel
+          run: |
+            cp .env.testing .env
+            configure-laravel
+        - name: Run unit tests
+          run: ./vendor/phpunit/phpunit/phpunit --coverage-text --colors=never --stderr
   lint:
     name: Lint & Insights
     runs-on: ubuntu-latest
