--- a/.env.testing
+++ b/.env.testing
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-test
+DB_HOST=mariadb
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
