--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME="Light Controls"
+APP_NAME="Light Control"
 APP_ENV=testing
 APP_KEY=base64:ATdpYjoX46B8yAP040gDRkHzPBR8pLJzbZhxq0vbphQ
 APP_DEBUG=true
